--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "zip": "node scripts/build-zip.js"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "1.5.0",
-    "chart.js": "4.4.0",
-    "clsx": "1.2.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
-    "vite": "5.4.21",
-    "tailwindcss": "3.5.0",
-    "postcss": "8.4.24",
-    "autoprefixer": "10.4.14"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.31",
+    "tailwindcss": "3.4.14",
+    "vite": "^5.0.0"
   }
 }
+
