--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "tailwindcss": "^3.5.0",
+    "tailwindcss": "^3.4.14"
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24"
   }
 }
+
