--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24"
   }
 }
+
 
