--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vite": "^5.0.0",
     "tailwindcss": "^3.4.14",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "@vitejs/plugin-react": "^4.2.0"
   }
 }
 
